--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.0",
     "react": "^17.0.1",
